--- a/ConferencePoll/ConferencePoll.csproj
+++ b/ConferencePoll/ConferencePoll.csproj
@@ -5,10 +5,15 @@
     <UserSecretsId>aspnet-ConferencePoll-46C272DF-9D69-4742-A520-B0CD94D3874A</UserSecretsId>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <DocumentationFile>C:\gitrepos\github\crgarcia12\crgarcia12-azure-web-conference-poll-\ConferencePoll\ConferencePoll.xml</DocumentationFile>
+  </PropertyGroup>
+
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.1.2" PrivateAssets="All" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.1.9" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="4.0.1" />
   </ItemGroup>
 
   <ItemGroup>
