--- a/ConferencePoll/ConferencePoll.csproj
+++ b/ConferencePoll/ConferencePoll.csproj
@@ -6,7 +6,7 @@
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <DocumentationFile>C:\gitrepos\github\crgarcia12\crgarcia12-azure-web-conference-poll-\ConferencePoll\ConferencePoll.xml</DocumentationFile>
+    <DocumentationFile></DocumentationFile>
   </PropertyGroup>
 
   <ItemGroup>
