--- a/conference-live-poll/frontend/package.json
+++ b/conference-live-poll/frontend/package.json
@@ -9,23 +9,23 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "next": "15.1.0",
-
-    "uuidv4": "^6.2.13",
-    "@eslint/eslintrc": "^3",
-    "@mui/material": "^5",
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
-    "@microsoft/signalr": "^5"
+    "@eslint/eslintrc": "^3",
+    "@microsoft/signalr": "^5",
+    "@mui/material": "^5",
+    "next": "15.1.0",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "uuid": "^11.0.3",
+    "uuidv4": "^6.2.13"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
-    "eslint-config-next": "15.1.0"
+    "eslint-config-next": "15.1.0",
+    "typescript": "^5"
   }
 }
