--- a/conference-live-poll/frontend/package.json
+++ b/conference-live-poll/frontend/package.json
@@ -14,6 +14,7 @@
     "@eslint/eslintrc": "^3",
     "@microsoft/signalr": "^8.0.7",
     "@mui/material": "^5",
+    "@mui/x-charts": "7.23.2",
     "next": "15.1.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
